--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>Document</title>
 </head>
 <body>
-    Dziendobry
+    <div style="background-color: red; width:200px; height:200px;"></div>
+    
+
 </body>
 </html>
