--- a/index.html
+++ b/index.html
@@ -1,13 +1,45 @@
 <!DOCTYPE html>
 <html lang="pl">
 <head>
+    <style>
+        body{
+            padding:0;
+            margin:0;
+        }
+        *{
+            box-sizing:border-box;
+        }
+        ul{
+            padding:0;
+            margin:0;
+        }
+        ul li{
+            list-style:none;
+            float:left;
+            width:25%;
+            position:relative;
+            background-color:#995677;
+            padding:20px;
+            text-align:center;
+        }
+        a{
+            color:black;
+            text-decoration: none;
+        }
+
+    </style>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SanessPL Website</title>
 </head>
 <body>
-    <div style="background-color: red; width:200px; height:200px;"></div>
+    <ul>
+        <a href=""><li>Start</li></a>
+        <a href=""><li>O mnie</li></a>
+        <a href=""><li>Portfolio</li></a>
+        <a href=""><li>Kontakt</li></a>
+    </ul>    
 
 
 </body>
